<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="50dp"
        android:text="@string/statistics_functions"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="50dp"
        android:text="@string/enter_number" />

    <EditText
        android:id="@+id/statNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
        android:hint="number"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="30dp"
        android:text="" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:insetLeft="90dp"
        android:insetRight="90dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/memNumbers"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:paddingLeft="20dp"
        android:text="Numbers added in memory" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:paddingTop="25dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="" />

    <Button
        android:id="@+id/btnClr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:insetLeft="90dp"
        android:insetRight="90dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btnAvg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:insetLeft="90dp"
        android:insetRight="90dp"
        android:text="@string/find_average" />

    <Button
        android:id="@+id/btnMinMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:insetLeft="90dp"
        android:insetRight="90dp"
        android:text="@string/find_min_max" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:paddingLeft="20dp"
        android:text="@string/answer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:paddingTop="25dp"
        android:text="" />

    <Button
        android:id="@+id/btnBC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="90dp"
        android:insetRight="90dp"
        android:text="@string/basic_calculator"/>
</LinearLayout>